# tf2-sku

./: README.md  README.rst  example.py  pyproject.toml  setup.py
src/tf2_sku/: __init__.py  sku.py  utils.py
tests/: test_sku.py
tf2_sku/: __init__.py  prettify.py  sku.py
